# CORHEL_Kamodo

./: README.md  WorkLog.md  corhel.Dockerfile  corhel.py  docker_entry_dev.sh  mkdocs.yml  notebook.Dockerfile  setup.cfg
corhel/: __init__.py  corhel.py  psihdf.py  run_converter.py
docs/: README.md  Slices.md
notebooks/: run_converter.py
