[metadata]
name = corhel
version = 0.0.1
author = Asher Pembroke
author_email = apembroke@predsci.com
description = CORHEL Kamodo interface
url = https://ccmc.gsfc.nasa.gov/Kamodo/
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.7
	Operating System :: OS Independent
	License :: MIT
license = MIT License

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  kamodo
  python-forge
  PyMCubes
  h5py>=2.8.0
  ; heliopy>=0.12.0
  ; astropy>=3.1.0
  ; spiceypy>=2.2.0
  ; sunpy>=2.0.0
  cdflib
  plotly>=4.9.0
  pyhdf>=0.10.2
  matplotlib>=3.0.0